--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>cat-browser</title>
   </head>
   <body>
+    <div id="root"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
